fixing title line height on mobile

--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ ul {
 	text-align: center;
 }
 
+h1 {
+	line-height: 1em;
+}
+
 .top-bar {
 		height:40px;
 		background-color:#bdc3c7;
